APDS-185,APDS-183,APDS-184  resolved issue with placement of dropdown breadcrumb menu,  resolved issue of header alert background color missing, and resolved issue of header icons using the wrong color font in the light scheme.

--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -915,3 +915,14 @@ def_PRIMITIVE textarea, .def_PRIMITIVE select, .def_PRIMITIVE .custom-button, .d
     height: 30px;
 }
 .sca-dark .sca-batch-table .table-full{background-color:#fff;}
+
+.sca-dark .header-alerts div .saved.red {
+   background-color: #db5760;
+}
+.sca-dark .header-alerts div .saved.blue {
+   background-color: #00a6e5;
+}
+
+.sca-dark .header-alerts div .saved.orange {
+   background-color: #ff9800;
+}
