--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -46,8 +46,8 @@ ul.dashboard-link-list li ul li a {
 ul.dashboard-link-list li ul {
     padding: 0;
     position: absolute;
-    top: 40px;
-    left: -29px;
+    top: 29px;
+    left: -35px;
     width: 120px;
     font-size: 13px;
     -webkit-box-shadow: none;
