--- a/app/styles/light.scss
+++ b/app/styles/light.scss
@@ -901,3 +901,5 @@ def_PRIMITIVE textarea, .def_PRIMITIVE select, .def_PRIMITIVE .custom-button, .d
     color: #909090;
 	 
 }
+
+.sca-light .header-nav-button.btn-default{color:#fff;}
